2005-01-31  Christian Hergert <chris@mosaix.net>

	* Extras/MonoQuery/Gui/SqlQueryView/SqlQueryView.cs: Updated to new
	ToolItem to fix compiler warning.

2005-01-26  Christian Hergert <chris@mosaix.net>

	* Extras/MonoQuery/Gui/Abstract/AbstractMonoQueryNode.cs:
	* Extras/MonoQuery/Commands/MonoQueryCommands.cs: Fixed to use new
	ShowView

2005-01-08  Christian Hergert <chris@mosaix.net>

	* Fixed druid to expand the connection after building

2005-01-08  Christian Hergert <chris@mosaix.net>
	
	* Following Makefile.am fixes
	* Copy .addin.xml if it changes
	* Fix setup to work if layout changes in the future
	* If .addin.xml changes, only copy addin and not rebuild the dll
	* Get package references from configure rather than statically
	* Added files with GetString to the PO .in file
	* Fixed a few warnings from build stage
	
2005-01-06  Christian Hergert <chris@mosaix.net>

	* Initial creation of MonoQuery AddIn