@@ -122,6 +122,10 @@ dnl PKG_CHECK_MODULES(MONO_DEBUGGER, mono-debugger >= $MONO_DEBUGGER_REQUIRED_VE
 dnl AC_SUBST(MONO_DEBUGGER_LIBS)
 enable_debugger=no
 
+dnl check for sqlite supported mono
+MONOQUERY_REQUIRED_MONO_VERSION=1.1.2.99
+PKG_CHECK_MODULES(MONO_VERSION, mono >= MONOQUERY_REQUIRED_MONO_VERSION, enable_sqlite=yes, enable_sqliter=no)
+
 MOZILLA_HOME="`$PKG_CONFIG --variable=libdir mozilla-gtkmozembed`"
 AC_SUBST(MOZILLA_HOME)
 
@@ -148,6 +152,9 @@ AC_ARG_ENABLE(update-mimedb,
     enable_update_mimedb=yes)
  AM_CONDITIONAL(ENABLE_UPDATE_MIMEDB, test x$enable_update_mimedb = xyes)
 
+dnl MonoQuery
+PKG_CHECK_MODULES(MONOQUERY_DEPENDENCIES_SQLITE,mono >= 1.1.2.99, enable_monoquery_sqlite=yes, enable_monoquery_sqlite=no)
+AM_CONDITIONAL(ENABLE_MONOQUERY_SQLITE, test x$enable_monoquery_sqlite = xyes)
 
 dnl Intl
 ALL_LINGUAS="da es fr ja_JP pt_BR tr"
