@@ -1,3 +1,7 @@
+2005-02-02  Christian Hergert <chris@mosaix.net>
+
+	* Extras/MonoQuery/Gui/SqlQueryView/SqlQueryView.cs: flush
+
 2005-01-31  Christian Hergert <chris@mosaix.net>
 
 	* Extras/MonoQuery/Gui/SqlQueryView/SqlQueryView.cs: Updated to new
